--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.2
 aiofiles==23.2.1
-python-magic==0.4.27 
+python-magic==0.4.27
+flask==3.0.2
+jinja2==3.1.3
+flask-login==0.6.3
+flask-sqlalchemy==3.1.1 
